refresh token added, user pages + default layouts
