# storage/api-docs/api-docs.json
@@ -143,6 +143,21 @@
                     }
                 }
             }
+        },
+        "/api/v1/auth/refresh-token": {
+            "get": {
+                "tags": [
+                    "api authentication"
+                ],
+                "summary": "Refresh token",
+                "description": "refresh token",
+                "operationId": "v1-auth-refresh-token",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
         }
     },
     "components": {
